# nwec

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: run_tests.yml
docs/: conf.py  index.rst
nwec/: __init__.py  constants.py  main.py  utils.py
nwec/utility_reporting/: avista.ipynb
nwec/utility_reporting/analysis/: arrearages.ipynb
nwec/utility_reporting/arrearages/: __init__.py  arrearages.py  avista.ipynb  cng.ipynb  nwng.ipynb  pac.ipynb  pse.ipynb
nwec/utility_reporting/num_customers/: avista.ipynb
nwec/utility_reporting/other/: avista.ipynb
nwec/utils/: __init__.py  excel.py  utils.py
tests/: test_placeholder.py
